--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,10 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-lib_deps = sstaub/Ticker@^4.4.0
+lib_deps = 
+	sstaub/Ticker@^4.4.0
+	greiman/SdFat@^2.2.2
+	paulstoffregen/Time@^1.6.1
+	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
+debug_tool = olimex-arm-usb-ocd-h
