--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,6 @@ lib_deps =
 	greiman/SdFat@^2.2.2
 	paulstoffregen/Time@^1.6.1
 	arduino-libraries/NTPClient@^3.2.1
+	bblanchon/ArduinoJson@^6.21.5
 monitor_speed = 115200
 debug_tool = olimex-arm-usb-ocd-h
